--- a/.buildkite/pipelines/rtl_only.yml
+++ b/.buildkite/pipelines/rtl_only.yml
@@ -18,7 +18,7 @@ steps:
 # INDIVIDUAL TILE RUNS
 # Builds in dir e.g. mflowgen/full_chip/19-tile_array/16-Tile_MemCore
 
-- label: '250MHz PE synth 12m'
+- label: 'FULL_CHIP RTL'
   commands:
   - $TEST --need_space 30G full_chip --steps rtl --debug
   - 'rtl_dir=full_chip/*-rtl;
