oops pe tile is fine, checking mem tile instead

--- a/.buildkite/pipelines/mem_tile_only.yml
+++ b/.buildkite/pipelines/mem_tile_only.yml
@@ -1,7 +1,7 @@
 agents: { jobsize: "hours" }
 
 env:
-  GOLD: /build/bdgtc-memtile.${BUILDKITE_BUILD_NUMBER}
+  GOLD: /build/mem_tile_only.${BUILDKITE_BUILD_NUMBER}
 
 steps:
 
