--- a/.buildkite/pipelines/pe_tile_only.yml
+++ b/.buildkite/pipelines/pe_tile_only.yml
@@ -1,7 +1,7 @@
 agents: { jobsize: "hours" }
 
 env:
-  GOLD: /build/bdgtc-pe.${BUILDKITE_BUILD_NUMBER}
+  GOLD: /build/pe_tile_only.${BUILDKITE_BUILD_NUMBER}
 
 steps:
 
