--- a/tests/test_app/Makefile
+++ b/tests/test_app/Makefile
@@ -76,7 +76,7 @@ sim: glb-rtl glc-rtl libcgra.so compile run
 # C API
 # -------------------------------------------------------------------
 .PHONY: libcgra.so
-libcgra.so: map.c map.h gen.c gen.h parser.c parser.h
+libcgra.so: map.c map.h gen.c gen.h parser.c parser.h common/tiny-json.c common/tiny-json.h
 	gcc -Wno-error -Wall parser.c map.c gen.c -shared -o libcgra.so -fPIC -DGLB_TILE_MEM_SIZE=$(GLB_TILE_MEM_SIZE)
 
 # -------------------------------------------------------------------
