--- a/.buildkite/pipelines/standalone_test.yml
+++ b/.buildkite/pipelines/standalone_test.yml
@@ -1,45 +1,21 @@
-# Run postroute_hold standalone, with two retry attempts in case of failure.
+# Build symlinks necessary to do "make postroute_hold"
+# using pre-cached collateral from dir $GOLD
 
 agents: { queue: "papers" }
 
 env:
-  BUILD     : /build/prh${BUILDKITE_BUILD_NUMBER}/full_chip
-  PHREF     : /sim/buildkite-agent/gold
-
-  # Set slack to -0.3 to make postroute_hold much faster.
-  # Default targ slack for full_chip @ 0.06 takes 6 hours atm.
-  # With hack target -0.3, should be about 2.5 hours (saves 3.5 hours)
-  MFLOWGEN_PARM_OVERRIDE_hold_target_slack : -0.3
+  BUILD : /build/prh${BUILDKITE_BUILD_NUMBER}/full_chip
+  GOLD  : /sim/buildkite-agent/gold
 
 steps:
-  - label: 'setup'
-    commands:
-    - 'source mflowgen/bin/setup-buildkite.sh --dir $$BUILD --need_space 1G;
-       mflowgen run --design $$GARNET_HOME/mflowgen/full_chip;
-       grep slack .mflowgen/*postroute_hold/mflowgen-run;
-       grep slack .mflowgen/*postroute_hold/configure.yml'
-  - wait: ~
-
-  ########################################################################
-  # postroute_hold fails sometimes, thus all this infrastructure for retry.
-  # 
-  # "prh.sh" does the following:
-  #   - if "*-postroute_hold" already done and passed, do nothing and exit 0
-  #   - else if (presumably failed) dir "*-postroute_hold" exists, rename it
-  #   - build new step postroute_hold
-  #
-  ########################################################################
-
-  # postroute_hold, retry if fail.
   - label: 'hold'
     commands:
       - echo "--- POSTROUTE_HOLD"
-      - 'set -o pipefail;
+      - 'set -o pipefail; \
          source mflowgen/bin/setup-buildkite.sh --dir $$BUILD --need_space 1G;
-         eval $$GARNET_HOME/mflowgen/bin/get-step-context.sh $$PHREF;
-         echo "+++ BUILD STEPS";
-         make -n cadence-innovus-postroute_hold
-         |& egrep "^mkdir.*output" | sed "s/output.*//" | egrep -v ^Make'
-
+         mflowgen run --design $$GARNET_HOME/mflowgen/full_chip'
+         $$GARNET_HOME/mflowgen/bin/get-step-context.sh $$GOLD \
+           cadence-innovus-postroute_hold'
+         # ready to do: make cadence-innovus-postroute_hold
 
 
