--- a/.buildkite/pipelines/glb_top.yml
+++ b/.buildkite/pipelines/glb_top.yml
@@ -9,14 +9,22 @@ steps:
 # Build mflowgen framework for full-chip
 - label: 'setup'
   commands:
-  - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD;
-     mflowgen run --design $$GARNET_HOME/mflowgen/full_chip'
+  - 'export OVERRIDE_MFLOWGEN_BRANCH=placementCheck;
+     source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 10G;
+     mflowgen run --design $$GARNET_HOME/mflowgen/full_chip;
+     set -x;
+     grep mem_size  $$GARNET_HOME/mflowgen/glb_top/construct.py;
+     grep mem_size .mflowgen/*glb_top/configure.yml;
+     grep mem_size -r .mflowgen;
+     '
+
 - wait: ~
 
 # Build RTL from scratch
 - label: 'rtl'
   commands:
-  - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 10G;
+  - 'export OVERRIDE_MFLOWGEN_BRANCH=placementCheck;
+     source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 10G;
      echo "--- MAKE RTL"; set -o pipefail;
      make rtl |& tee make-rtl.log'
 - wait: ~
@@ -24,7 +32,8 @@ steps:
 # make glb_top
 - label: 'glb_top'
   commands:
-  - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 10G;
+  - 'export OVERRIDE_MFLOWGEN_BRANCH=placementCheck;
+     source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 10G;
      echo "--- MAKE GLB_TOP"; set -o pipefail;
      make glb_top |& tee make-glb_top.log'
 - wait: ~
