--- a/.buildkite/pipeline_fullchip.yml
+++ b/.buildkite/pipeline_fullchip.yml
@@ -32,11 +32,12 @@ steps:
      make rtl |& tee make-rtl.log'
 - wait: ~
 
+# Note: "echo exit 13" prevents hang at genus/innovus prompt, allows clean fail
 - label: 'tile_array'
   commands:
   - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 100G;
      echo "--- MAKE TILE_ARRAY"; set -o pipefail;
-     make tile_array |& tee make-tile_array.log'
+     echo exit 13 | make tile_array |& tee make-tile_array.log'
   - 'echo "--- DELETE SVDB"; set -x;
      find $$GOLD -name svdb -exec echo /bin/rm -rf {} \; > /tmp/tmp$$.sh;
      source /tmp/tmp$$.sh; /bin/rm /tmp/tmp$$.sh'
@@ -61,7 +62,7 @@ steps:
   commands:
   - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 74G;
      echo "--- MAKE GLOBAL_CONTROLLER"; set -o pipefail;
-     make global_controller |& tee make-GLC.log'
+     echo exit 13 | make global_controller |& tee make-GLC.log'
 - wait: ~
 
 - label: 'dragon'
@@ -97,21 +98,21 @@ steps:
   commands:
   - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 71G;
      echo "--- MAKE CADENCE-INNOVUS-CTS"; set -o pipefail;
-     make cadence-innovus-cts |& tee make-cts.log'
+     echo exit 13 | make cadence-innovus-cts |& tee make-cts.log'
 - wait: ~
 
 - label: 'route'
   commands:
   - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 71G;
      echo "--- MAKE CADENCE-INNOVUS-ROUTE"; set -o pipefail;
-     make cadence-innovus-route |& tee make-route.log'
+     echo exit 13 | make cadence-innovus-route |& tee make-route.log'
 - wait: ~
 
 - label: 'postroute'
   commands:
   - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 71G;
      echo "--- MAKE CADENCE-INNOVUS-POSTROUTE"; set -o pipefail;
-     make cadence-innovus-postroute |& tee make-postroute.log'
+     echo exit 13 | make cadence-innovus-postroute |& tee make-postroute.log'
 - wait: ~
 
 ##########################################################################
