bad buildkite agent??

--- a/.buildkite/pipelines/fullchip_pe.yml
+++ b/.buildkite/pipelines/fullchip_pe.yml
@@ -1,6 +1,7 @@
 # run PE LVS ONLY
 
-agents: { jobsize: "hours" }
+# agents: { jobsize: "hours" }
+agents: { jobsize: "papers" }
 
 ##############################################################################
 # Use this to test a specific branch/commit:
