--- a/.buildkite/pipelines/pe_tile_only.yml
+++ b/.buildkite/pipelines/pe_tile_only.yml
@@ -1,8 +1,8 @@
 agents: { jobsize: "hours" }
 
 env:
-  GOLD: /build/pe${BUILDKITE_BUILD_NUMBER}
-  # OVERRIDE_MFLOWGEN_BRANCH: silent_fail
+  GOLD: /build/pe_tile_only.${BUILDKITE_BUILD_NUMBER}
+  OVERRIDE_MFLOWGEN_BRANCH: silent_fail
 
 steps:
 
