fix svdb removal error; clean up log summary

--- a/.buildkite/pipelines/fullchip_pe.yml
+++ b/.buildkite/pipelines/fullchip_pe.yml
@@ -26,5 +26,5 @@ steps:
   - $TEST --need_space 30G full_chip tile_array --steps rtl --build_dir $GOLD
   - $TEST --need_space 30G full_chip tile_array Tile_PE --build_dir $GOLD
   - 'echo "--- DELETE SVDB DIRS"; set -x;
-     find full_chip -name svdb -exec echo /bin/rm -rf {} \; > /tmp/tmp$$.sh;
+     find $$GOLD/full_chip -name svdb -exec echo /bin/rm -rf {} \; > /tmp/tmp$$.sh;
      source /tmp/tmp$$.sh; /bin/rm /tmp/tmp$$.sh'
