--- a/.buildkite/pipelines/glb_top.yml
+++ b/.buildkite/pipelines/glb_top.yml
@@ -4,14 +4,14 @@ agents: { queue: "papers" }
 
 env:
   GOLD: /build/glb${BUILDKITE_BUILD_NUMBER}/full_chip
+  # OVERRIDE_MFLOWGEN_BRANCH: placementCheck
 
 steps:
 
 # Build mflowgen framework for full-chip
 - label: 'setup'
   commands:
-  - 'export OVERRIDE_MFLOWGEN_BRANCH=placementCheck;
-     source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 10G;
+  - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 10G;
      mflowgen run --design $$GARNET_HOME/mflowgen/full_chip;
      set -x;
      grep mem_size  $$GARNET_HOME/mflowgen/glb_top/construct.py;
@@ -24,8 +24,7 @@ steps:
 # Build RTL from scratch
 - label: 'rtl'
   commands:
-  - 'export OVERRIDE_MFLOWGEN_BRANCH=placementCheck;
-     source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 10G;
+  - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 10G;
      echo "--- MAKE RTL"; set -o pipefail;
      make rtl |& tee make-rtl.log'
 - wait: ~
@@ -34,8 +33,7 @@ steps:
 # Note: "echo exit 13" prevents hang at genus/innovus prompt, allows clean fail
 - label: 'glb_top'
   commands:
-  - 'export OVERRIDE_MFLOWGEN_BRANCH=placementCheck;
-     source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 10G;
+  - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 10G;
      echo "--- MAKE GLB_TOP"; set -o pipefail;
      echo exit 13 | make glb_top |& tee make-glb_top.log'
 - wait: ~
