Big gbtile for 4M GLB (instead of 1M) (#806)
* setting up a glb tile test
* standalone don't work so good
* hm okay lets try glb_top
* placementCheck?
* ready to watch it fail...
* need exit 13 for when innovus job hangs
* exit thirteens for CI
* restore original glb tile mem size
* try different sram spacing, bigger GB
* oops block_width used before set
* pe tile test
* pe tile test II
* pe tile in fullchip context
* use fullchip rtl
* duplicate failure of run 280 i hope
* change glb back to orig size
* uniquify to fix nondeterminism
* queue up a 4M run
* okay lets try the shebang
* fix ten shorts instead of two
* final cleanup and test
* fix svdb removal error; clean up log summary
* glb-top test
* quick check of latest mflowgen changes
* final cleanup
* fixed wrong year (again)
* hand merge w shortfix

--- a/.buildkite/pipelines/glb_top.yml
+++ b/.buildkite/pipelines/glb_top.yml
@@ -3,14 +3,21 @@ agents: { queue: "papers" }
 
 env:
   GOLD: /build/glb${BUILDKITE_BUILD_NUMBER}/full_chip
+  # OVERRIDE_MFLOWGEN_BRANCH: placementCheck
 
 steps:
 
 # Build mflowgen framework for full-chip
 - label: 'setup'
   commands:
-  - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD;
-     mflowgen run --design $$GARNET_HOME/mflowgen/full_chip'
+  - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 10G;
+     mflowgen run --design $$GARNET_HOME/mflowgen/full_chip;
+     set -x;
+     grep mem_size  $$GARNET_HOME/mflowgen/glb_top/construct.py;
+     grep mem_size .mflowgen/*glb_top/configure.yml;
+     grep mem_size -r .mflowgen;
+     '
+
 - wait: ~
 
 # Build RTL from scratch
@@ -22,10 +29,11 @@ steps:
 - wait: ~
 
 # make glb_top
+# Note: "echo exit 13" prevents hang at genus/innovus prompt, allows clean fail
 - label: 'glb_top'
   commands:
   - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 10G;
      echo "--- MAKE GLB_TOP"; set -o pipefail;
-     make glb_top |& tee make-glb_top.log'
+     echo exit 13 | make glb_top |& tee make-glb_top.log'
 - wait: ~
 
