--- a/mflowgen/common/gen_sram_macro/configure.yml
+++ b/mflowgen/common/gen_sram_macro/configure.yml
@@ -23,3 +23,7 @@ parameters:
   corner: "tt0p8v25c"
   bc_corner: "ffg0p88v125c"
   partial_write: False
+
+postconditions:
+   # Sanity check to see if we at least got one sram
+   - assert File( 'outputs/sram_tt.lib' )
