--- a/global_buffer/Makefile
+++ b/global_buffer/Makefile
@@ -1,6 +1,8 @@
 #!/bin/bash
+mkfile_path := $(abspath $(lastword $(MAKEFILE_LIST)))
+current_dir := $(abspath $(dir $(mkfile_path)))
+
 RTL_DIR := ./rtl
-RDL_DIR := systemRDL/output
 TB_DIR := ./sim
 
 TOP_MODULE := global_buffer
@@ -10,10 +12,10 @@ NUM_GLB_TILES ?= $(shell expr $(CGRA_WIDTH) / 2 )
 GLB_TILE_MEM_SIZE ?= 256
 
 RUNARGS = 
-# RUNARGS += +TEST_GLB_MEM_SIMPLE
+RUNARGS += +TEST_GLB_MEM_SIMPLE
 # RUNARGS += +TEST_GLB_CFG
 # RUNARGS += +CFG_TEST_NUM_TILE=2
-RUNARGS += +TEST_GLB_G2F_STREAM
+# RUNARGS += +TEST_GLB_G2F_STREAM
 # RUNARGS += +TEST_GLB_F2G_STREAM
 # RUNARGS += +TEST_PCFG_STREAM
 
@@ -22,16 +24,11 @@ GLB_TOP_NETLIST := ./netlist/global_buffer.vcs.v
 SRAM_RTL := /sim/kongty/mc/ts1n16ffcllsblvtc2048x64m8sw_130a/VERILOG/ts1n16ffcllsblvtc2048x64m8sw_130a.v
 SRAM_STUB := ./rtl/TS1N16FFCLLSBLVTC2048X64M8SW.sv
 
-RTL_LISTS := `cat $(RTL_DIR)/global_buffer.f | sed -e 's/^/$(RTL_DIR)\//' | xargs readlink -f`
-
 FIX_SYSTEMRDL = \
     sed -i '/pio_dec_write_data_d1 <=/d' ./systemRDL/output/glb_jrdl_decode.sv; \
     sed -i '/pio_dec_address_d1 <=/d' ./systemRDL/output/glb_jrdl_decode.sv; \
     sed -i '/endmodule/d' ./systemRDL/output/glb_jrdl_decode.sv; \
     printf "always_ff @ (posedge clk) begin \n pio_dec_address_d1 <= pio_dec_address; \n pio_dec_write_data_d1 <= pio_dec_write_data; \nend \nendmodule" >> ./systemRDL/output/glb_jrdl_decode.sv
-
-DUMP_PIO_WRAPPER = \
-    sed '/\.\*/d' ./systemRDL/output/glb_pio.sv > ./systemRDL/output/glb_pio_wrapper.sv
 
 GENERATE_TV = python glb_test_gen.py
 
@@ -71,31 +68,11 @@ VCS = vcs \
 # -------------------------------------------------------------------
 # RTL
 # -------------------------------------------------------------------
-# param target generates global_buffer_param.svh
-.PHONY: param
-param: global_buffer_main.py global_buffer_magma_helper.py
-	cd .. && python -m global_buffer.global_buffer_main -p --num_cgra_cols=$(CGRA_WIDTH) --num_glb_tiles=$(NUM_GLB_TILES) --glb_tile_mem_size=$(GLB_TILE_MEM_SIZE)
-
-# rtl target always runs param target
-rdl_pre = systemRDL/rdl_models/glb.rdl.pre
-$(rdl_pre): param systemRDL/rdl_models/glb.rdl
-	cat systemRDL/rdl_models/glb.rdl.param systemRDL/rdl_models/glb.rdl > systemRDL/rdl_models/glb.rdl.pre
-
-rdl_post = systemRDL/rdl_models/glb.rdl.post
-$(rdl_post): $(rdl_pre)
-	../systemRDL/perlpp.pl systemRDL/rdl_models/glb.rdl.pre -o systemRDL/rdl_models/glb.rdl.post
-
-rdl_gen = $(RDL_DIR)/glb_jrdl_decode.sv $(RDL_DIR)/glb_jrdl_logic.sv $(RDL_DIR)/glb_pio.sv
-$(rdl_gen): $(rdl_post)
-	java -jar ../systemRDL/Ordt.jar -reglist systemRDL/output/glb.reglist -parms systemRDL/ordt_params/glb.parms -systemverilog systemRDL/output/ systemRDL/rdl_models/glb.rdl.post
-	python ../systemRDL/gen_config_addrmap.py --rdl systemRDL/rdl_models/glb.rdl.post --output systemRDL/output --name glb_addrmap --header --html --json
-
-$(RTL_LISTS): $(rdl_gen)
-
 .PHONY: rtl
-rtl: $(RTL_LISTS)
+rtl: export GARNET_HOME := $(current_dir)/..
+rtl: 
+	python global_buffer_main.py -r -v -p
 	$(FIX_SYSTEMRDL);
-	$(DUMP_PIO_WRAPPER)
 
 # -------------------------------------------------------------------
 # Compile & Run
@@ -110,7 +87,7 @@ compile:
 
 .PHONY: run
 run: compile
-	./simv -ucli -i vcs_cmd.tcl $(RUNARGS)
+	./simv -ucli -i top-shm.tcl $(RUNARGS)
 
 # -------------------------------------------------------------------
 # GLS Compile & Run
@@ -131,6 +108,22 @@ compile-gl: XRUNARGS += -sdf_cmd_file netlist/sdf_cmd.cmd
 compile-gl: XRUNARGS += -sdfstats sdf_stats.txt -sdf_verbose -xminitialize 0 -xminit_log init.log
 compile-gl:
 	$(XRUN)
+
+
+# -------------------------------------------------------------------
+# Tile Compile & Run
+# -------------------------------------------------------------------
+.PHONY: compile-tile
+compile-tile: XRUNARGS+= -notimingchecks
+compile-tile: VCSARGS+= +nospecify
+compile-tile: DESIGNARGS += header/global_buffer_param.svh header/glb.svh sim-tile/top.sv sim-tile/glb_tile_test.sv glb_tile.sv
+compile-tile:
+	$(GENERATE_TV); 
+	$(VCS)
+
+.PHONY: run-tile
+run-tile: compile-tile
+	./simv -ucli -i tile-shm.tcl $(RUNARGS)
 
 .PHONY: clean
 clean:
