--- a/setup.cfg
+++ b/setup.cfg
@@ -4,3 +4,4 @@ max-line-length = 120
 # E741: do not use variables named ‘l’, ‘O’, or ‘I’
 # We ignore this because I and O is currently idiomatic magma for port names
 ignore = E741
+ignore = W503
