Global buffer testbench working

--- a/global_buffer/Makefile
+++ b/global_buffer/Makefile
@@ -2,11 +2,6 @@
 mkfile_path := $(abspath $(lastword $(MAKEFILE_LIST)))
 current_dir := $(abspath $(dir $(mkfile_path)))
 
-RTL_DIR := ./rtl
-TB_DIR := ./sim
-
-TOP_MODULE := global_buffer
-
 CGRA_WIDTH ?= 32
 NUM_GLB_TILES ?= $(shell expr $(CGRA_WIDTH) / 2 )
 GLB_TILE_MEM_SIZE ?= 256
@@ -14,15 +9,9 @@ GLB_TILE_MEM_SIZE ?= 256
 RUNARGS = 
 RUNARGS += +TEST_GLB_MEM_SIMPLE
 # RUNARGS += +TEST_GLB_CFG
-# RUNARGS += +CFG_TEST_NUM_TILE=2
 RUNARGS += +TEST_GLB_G2F_STREAM
-# RUNARGS += +TEST_GLB_F2G_STREAM
-# RUNARGS += +TEST_PCFG_STREAM
-
-GLB_TILE_NETLIST := ./netlist/glb_tile.vcs.v
-GLB_TOP_NETLIST := ./netlist/global_buffer.vcs.v
-SRAM_RTL := /sim/kongty/mc/ts1n16ffcllsblvtc2048x64m8sw_130a/VERILOG/ts1n16ffcllsblvtc2048x64m8sw_130a.v
-SRAM_STUB := ./rtl/TS1N16FFCLLSBLVTC2048X64M8SW.sv
+RUNARGS += +TEST_GLB_F2G_STREAM
+RUNARGS += +TEST_PCFG_STREAM
 
 FIX_SYSTEMRDL = \
     sed -i '/pio_dec_write_data_d1 <=/d' ./systemRDL/output/glb_jrdl_decode.sv; \
@@ -61,6 +50,7 @@ VCS = vcs \
 	  +overlap \
 	  +v2k \
 	  +memcbk \
+	  -cm_seqnoconst \
 	  -l vcs.log \
 	  $(VCSARGS) \
 	  $(DESIGNARGS)
@@ -96,39 +86,23 @@ run: compile
 # -------------------------------------------------------------------
 # GLS Compile & Run
 # -------------------------------------------------------------------
-.PHONY: compile-gl
-compile-gl: DESIGNARGS += \
-	$(RTL_DIR)/global_buffer_param.svh \
-	$(RTL_DIR)/global_buffer_pkg.svh \
-	-F $(TB_DIR)/tb_$(TOP_MODULE).filelist \
-	-F netlist/netlist.filelist
-# compile-gl: XRUNARGS += +define+PWR
-compile-gl: XRUNARGS += +define+NON_STOP_IF_INPUT_Z
-compile-gl: XRUNARGS += +define+PNR +define+TSMC_CM_NO_WARNING
-compile-gl: XRUNARGS += +define+TSMC_CM_UNIT_DELAY
-compile-gl: XRUNARGS += +define+TSMC_INITIALIZE_MEM_USING_DEFAULT_TASKS +define+TSMC_MEM_LOAD_0
-compile-gl: XRUNARGS += -negdelay
-compile-gl: XRUNARGS += -sdf_cmd_file netlist/sdf_cmd.cmd
-compile-gl: XRUNARGS += -sdfstats sdf_stats.txt -sdf_verbose -xminitialize 0 -xminit_log init.log
-compile-gl:
-	$(XRUN)
-
-
-# -------------------------------------------------------------------
-# Tile Compile & Run
-# -------------------------------------------------------------------
-.PHONY: compile-tile
-compile-tile: XRUNARGS+= -notimingchecks
-compile-tile: VCSARGS+= +nospecify
-compile-tile: DESIGNARGS += header/global_buffer_param.svh header/glb.svh sim-tile/top.sv sim-tile/glb_tile_test.sv glb_tile.sv systemRDL/output/glb_pio.sv systemRDL/output/glb_jrdl_decode.sv systemRDL/output/glb_jrdl_logic.sv
-compile-tile: 
-	$(GENERATE_TV); 
-	$(VCS)
-
-.PHONY: run-tile
-run-tile:
-	./simv +vcs+initreg+0 -ucli -i tile-ucli.tcl $(RUNARGS)
+# .PHONY: compile-gl
+# compile-gl: DESIGNARGS += \
+# 	$(RTL_DIR)/global_buffer_param.svh \
+# 	$(RTL_DIR)/global_buffer_pkg.svh \
+# 	-F $(TB_DIR)/tb_$(TOP_MODULE).filelist \
+# 	-F netlist/netlist.filelist
+# # compile-gl: XRUNARGS += +define+PWR
+# compile-gl: XRUNARGS += +define+NON_STOP_IF_INPUT_Z
+# compile-gl: XRUNARGS += +define+PNR +define+TSMC_CM_NO_WARNING
+# compile-gl: XRUNARGS += +define+TSMC_CM_UNIT_DELAY
+# compile-gl: XRUNARGS += +define+TSMC_INITIALIZE_MEM_USING_DEFAULT_TASKS +define+TSMC_MEM_LOAD_0
+# compile-gl: XRUNARGS += -negdelay
+# compile-gl: XRUNARGS += -sdf_cmd_file netlist/sdf_cmd.cmd
+# compile-gl: XRUNARGS += -sdfstats sdf_stats.txt -sdf_verbose -xminitialize 0 -xminit_log init.log
+# compile-gl:
+# 	$(XRUN)
 
 .PHONY: clean
 clean:
-	rm -rf xrun.log xrun.history xcelium.d
+	rm -rf xrun.log xrun.history xcelium.d simv simv.daidir csrc vcs.log
