--- a/global_buffer/Makefile
+++ b/global_buffer/Makefile
@@ -8,7 +8,7 @@ GLB_TILE_MEM_SIZE ?= 256
 
 RUNARGS = 
 RUNARGS += +TEST_GLB_MEM_SIMPLE
-# RUNARGS += +TEST_GLB_CFG
+RUNARGS += +TEST_GLB_CFG
 RUNARGS += +TEST_GLB_G2F_STREAM
 RUNARGS += +TEST_GLB_F2G_STREAM
 RUNARGS += +TEST_PCFG_STREAM
