Make glb flow flexible to parameter

--- a/global_buffer/Makefile
+++ b/global_buffer/Makefile
@@ -62,7 +62,7 @@ VCS = vcs \
 rtl: export GARNET_HOME := $(current_dir)/..
 rtl: export PYTHONPATH = $(GARNET_HOME):$$PYTHONPATH
 rtl: 
-	python global_buffer_main.py -r -v -p
+	python global_buffer_main.py -r -v -p --num_cgra_cols=$(CGRA_WIDTH) --num_glb_tiles=$(NUM_GLB_TILES) --glb_tile_mem_size=$(GLB_TILE_MEM_SIZE)
 	$(FIX_SYSTEMRDL)
 	cat systemRDL/output/glb_pio.sv >> global_buffer.sv
 	cat systemRDL/output/glb_jrdl_decode.sv >> global_buffer.sv
