--- a/mflowgen/common/rtl/configure.yml
+++ b/mflowgen/common/rtl/configure.yml
@@ -10,6 +10,7 @@ parameters:
   array_width: 4
   array_height: 2
   glb_tile_mem_size: 256
+  num_glb_tiles: 2
   pipeline_config_interval: 8
   interconnect_only: False
   soc_only: False
